Blender Internal: UV Mapping inside node groups does not work #46050

Closed
opened 2015-09-08 18:35:49 +02:00 by Philip Holzmann · 9 comments

System Information
Windows 7 64 bit
Nvidia GTX 750Ti

Blender Version
Broken: (2.75.4 946b850)

Short description of error
In Blender Internal material nodes:
If you use the UV output of the Input>Geometry inside a node group without using it outside, the UV coordinates won't be correct.

Exact steps for others to reproduce the error
In the node editor, you can see a node group ("TestTexture") connected to the material output. The node group contains a UV input, connected to a texture node.
The other two nodes are unused.
If you press render, you should see a textured cube, but you don't, because of the bug.

But if you re-render with the UV output connected to the input of the RGB to BW-node (or any other input), it will render correctly. Even though these two nodes aren't connected to the output at all.

bug.blend

**System Information** Windows 7 64 bit Nvidia GTX 750Ti **Blender Version** Broken: (2.75.4 946b850) **Short description of error** In Blender Internal material nodes: If you use the UV output of the Input>Geometry inside a node group without using it outside, the UV coordinates won't be correct. **Exact steps for others to reproduce the error** In the node editor, you can see a node group ("TestTexture") connected to the material output. The node group contains a UV input, connected to a texture node. The other two nodes are unused. If you press render, you should see a textured cube, but you don't, because of the bug. But if you re-render with the UV output connected to the input of the RGB to BW-node (or any other input), it will render correctly. Even though these two nodes aren't connected to the output at all. [bug.blend](https://archive.blender.org/developer/F231491/bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Foaly

Added subscriber: @Foaly

#46317 was marked as duplicate of this issue

#46317 was marked as duplicate of this issue

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 8f25c12110

This issue was referenced by 8f25c1211001daa68a5a4b3271eb722064367908

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Added subscriber: @Roah

Added subscriber: @Roah
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46050
No description provided.