Fix T46050: blender internal geometry node UV not working inside node group.